# BJ61-Intern

./: README.md
STLC_OCaml/: .ocamlinit  README.md  dune-project  lab2.opam
STLC_OCaml/lib/: cmd.ml  dune  dynamics.ml  info.ml  lexer.mll  parser.mly  statics.ml  syntax.ml  term.ml  test.ml  test.stlc  todo.ml  type.ml
UTLC_OCaml/lib/: arithmetic.ml  combinator.ml  lambda.ml  lambda.mli
UTLC_PythonNotebook/: s-exp.ipynb  utlb.ipynb  utlb_test.ipynb
microKanreninPython/: kanren.ipynb
miniKanren/: UTLC.rkt  mk.rkt
miniKanren/compiled/drracket/errortrace/: mk_rkt.dep  mk_rkt.zo  mkr_rkt.dep  mkr_rkt.zo  racket-compat_rkt.dep  racket-compat_rkt.zo
miniKanren/mk/: mk.rkt
miniKanren/mk/compiled/drracket/errortrace/: mk_rkt.dep  mk_rkt.zo
