(lang dune 3.3)

(name lab2)

(generate_opam_files true)

(authors "PPL2022 Your Name")
(maintainers "Your Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name lab2)
 (synopsis "Write youself a simply typed lambda calculus and fix extension.")
 (description "Implement simply typed lambda calculus and fix extension.")
 (depends (ocaml (>= 4.14.0)) dune base ppxlib)
 (tags
  (ppl lab "simply typed lambda calculus" fix)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project